fixed issue with match results on mobile screens

--- a/static/css/soccer.css
+++ b/static/css/soccer.css
@@ -43,7 +43,6 @@ h2 {
 }
 
 .score {
-  display: inline-block;
   font-size: 2.5rem;
 }
 
